@@ -646,7 +646,7 @@ class EventHandler
       REFRESH_SIZE         = 0,
     #endif
       EMUL_ACTIONLIST_SIZE = 211 + PNG_SIZE + COMBO_SIZE + REFRESH_SIZE,
-      MENU_ACTIONLIST_SIZE = 18
+      MENU_ACTIONLIST_SIZE = 19
     ;
 
     // The event(s) assigned to each combination event
